flight-tracker/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: flight-tracker
spec:
  selector:
    app: api-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
