flight-tracker/k8s/ingestion-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: flight-tracker
spec:
  selector:
    app: ingestion-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
