flight-tracker/k8s/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: flight-tracker
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
