flight-tracker/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-tracker-ingress
  namespace: flight-tracker
spec:
  rules: []
